--- a/00-J1-CS1B-ASI-September-2021/Question_7.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_7.Rmd
@@ -8,6 +8,32 @@ output:
       highlightStyle: github
       countIncrementalSlides: false
 ---
+
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 7
+
+---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
 Solution 7:
 i) # Fitting Linear Regression Model
 R Code:
