--- a/00-J1-CS1B-ASI-September-2021/Question_6.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_6.Rmd
@@ -37,8 +37,13 @@ Q. 6) You are investigating the level of premium charged by two companies for ce
 Random samples of 10 policies from Company1 and Company2 are compared. Below R 
 code provides the premiums charged by Company1 and Company2 in current year for 
 10 sample policies.
- Company1<-c(1350,1790,1500,1150,2100,2350,1550,1800,1650,1450)
- Company2<-c(1500,1200,1300,1700,1800,2400,1450,1950,1850,2100)
+```{r}
+ Company1 <- c(1350,1790,1500,1150,2100,2350,1550,1800,1650,1450)
+ Company2 <- c(1500,1200,1300,1700,1800,2400,1450,1950,1850,2100)
+ 
+```
+
+
 Students are required to provide hypothesis, R code, Output and conclusion
 
 ---
@@ -46,14 +51,14 @@ Students are required to provide hypothesis, R code, Output and conclusion
 i) Assuming that the premiums are normally distributed, carry out a statistical test to 
 check equal variance assumption so that it is appropriate to apply a two-sample t 
 test to these data. 
- Use R code – var.test (4)
+ Use R code – var.test 
 ii) Test whether the level of premiums charged by Company1 and Company2 are 
 same.
- Use R code – t.test (use var.equal =TRUE) (4)
+ Use R code – t.test (use var.equal =TRUE) 
 iii) The average premium charged by Company2 in the previous year was INR 1500. 
 Test whether Company2 appears to have increased its premiums since the previous 
 year.
- Use R code -t.test (#one sided) (4)
+ Use R code -t.test (#one sided) 
 
 
 
@@ -66,8 +71,8 @@ i) H0 – Company1 and Company2 having equal variance (i.e., ratio of variance =
 H1 – There is a difference in variance between Company1 and Company2.
 
 ```{r}
-Company1<-c(1350,1790,1500,1150,2100,2350,1550,1800,1650,1450)
-Company2<-c(1500,1200,1300,1700,1800,2400,1450,1950,1850,2100)
+Company1 <- c(1350,1790,1500,1150,2100,2350,1550,1800,1650,1450)
+Company2 <- c(1500,1200,1300,1700,1800,2400,1450,1950,1850,2100)
 ```
 
 ---
@@ -97,17 +102,21 @@ t.test(Company1, Company2, var.equal = TRUE, conf=0.95)
 ```
  
 ---
-Conclusion – As the confidence interval for the difference in mean premium includes 0, we do 
+#### Conclusion 
+
+As the confidence interval for the difference in mean premium includes 0, we do 
 not have enough evidence to reject H0 at 5% significance level. Hence, we can conclude that 
 there is no difference between mean premium charged by Company1 and Company2 at 5% 
-significance level. (4)
+significance level. 
 
 
 ---
 
 iii) H0 – mean premium charged by Company2 is INR 1500. 
 H1 – mean premium charged by Company2 is greater than 1500.
+```{r}
 t.test(Company2, mu=1500, alternative= c("greater"), conf=0.95)
+```
  One Sample t-test
 data: Company2
 t = 1.9082, df = 9, p-value = 0.04436
@@ -128,12 +137,14 @@ Hence, we can conclude that the mean premium charged by Company2 is greater than
 at 5% significance level. 
 
 ---
+
+#### Exercise 4
+
 iv) It was found that out of sample of 200 policies of Company1 and 100 policies of 
 Company2 sold at the start of the year, 60 policies of Company1 and 50 policies of 
 Company2 resulted in claim. Carry out a hypothesis test for the difference in 
 proportions.
- Use R code – prop.test (use correct=FALSE) (4)
- 
+ Use R code – prop.test (use correct=FALSE)
 
  
 ---
@@ -145,7 +156,10 @@ Company2.
 
 H1 – There is difference in proportion of (policies that result in) claim between Company1 and 
 Company2.
+
+```{r}
 prop.test(c(60,50),c(200,100),correct=FALSE)
+```
  2-sample test for equality of proportions without continuity correction
 data: c(60, 50) out of c(200, 100)
 X-squared = 11.483, df = 1, p-value = 0.0007023
@@ -165,9 +179,12 @@ Company1 and Company2 at 5% significance level.
 
 
 --- 
+#### Exercise 5
+
 v) Company2 wants to study the claim frequency between group1 policies having 
 premium less than INR 1500 and remaining policyholders. There were 65 claims 
 out of 250 policies of group1 and 45 claims out of 110 other policies in a year. 
+
 Assuming number of claims having Poisson distribution, test at 2.5% level whether 
 the ratio of claim frequency between group1 and other policyholders is less than 1.
  Use R code – poisson.test (#one sided) (4)
