--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question5.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question5.Rmd
@@ -36,23 +36,32 @@ pre {
 * Time Series. Probability Distributions, Survival Analysis
 
 ---
-Q. 5) A study aimed at estimating hazard rates and survival probabilities has produced the results of
+A study aimed at estimating hazard rates and survival probabilities has produced the results of
 Nj=Number at risk and Dj=Decrements for different time intervals tj as shown in 
-CS2B_Mar22_Dataset3.csv. The researchers analysed the results using Nelson-Aalen model 
+CS2B_Mar22_Dataset3.csv. 
+
+The researchers analysed the results using Nelson-Aalen model 
 of comparison.
+
+---
+
+#### Exercises
 
 i) Write down the formulae for the estimated integrated hazard and the estimated variance of 
 this estimator, using the Nelson-Aalen model. 
+
 ii) Find the estimated integrated hazard and the estimated variance of this estimator for the 
-given data for each time tj. 
+given data for each time $t_j$. 
 
 
 ---
 
 
 iii) Produce a scatter plot in R along with corresponding 95% confidence intervals for the 
-Nelson-Aalen model. Paste the plot in the answer. (6)
-iv) Compute the survival function according to the Kaplan Meier estimate. (3)
+Nelson-Aalen model. Paste the plot in the answer.
+
+iv) Compute the survival function according to the Kaplan Meier estimate. 
+
 v) Demonstrate numerically the validity of the inequality relationship between the survival 
 function using the Nelson Aalen model and the Kaplan Meier model using the data in this 
 study. 
@@ -94,10 +103,7 @@ data$varlambda=cumsum(data$dj*(data$nj-data$dj)/data$nj^3)
 ```{r}
 head(data)
 
-## j tj nj dj lambda varlambda
-## 1 1 4 100 2 0.02000000 0.0001960000
-## 2 2 5 98 2 0.04040816 0.0003999966
-## 3 3 8 96 1 0.05082483 0.0005073733
+
 ```
 
 ---
@@ -105,8 +111,11 @@ head(data)
 #### Part (iii)
 
 ```{r}
-plot(c(0,data$tj),c(0,data$lambda),type="s",main="Nelson-Aalen estimator of t
-he integrated hazard",xlab="Time t",ylab="Integrated hazard") 
+plot(c(0,data$tj),c(0,data$lambda),
+  type="s",
+  main="Nelson-Aalen estimator of the integrated hazard",
+  xlab="Time t",
+  ylab="Integrated hazard") 
 
 ```
 
@@ -144,12 +153,11 @@ data$Survival_KM
 
 #### Part (v)
 
-```{r}
-# The inequality states that:
+The inequality states that:
  
-# Survival function of Kaplan Meir SKM(t) < survival function of Nelson Aalen SNA(t) 
-# To demonstrate the inequality:
-```
+Survival function of Kaplan Meir SKM(t) < survival function of Nelson Aalen SNA(t) 
+To demonstrate the inequality:
+
 
 ---
 
