--- a/00-H2-CS2B-ASI-March-2021/Question_3.Rmd
+++ b/00-H2-CS2B-ASI-March-2021/Question_3.Rmd
@@ -40,7 +40,7 @@ The Claim size $X$ for a class of insurance follows a Gamma (10,0.2) distributio
 
 #### Exercises
 
-1. Calculate f{30}. 
+1. Calculate $f{30}$. 
 2. Calculate the median of the function. 
 
 ---
